fix footer layout issue in base template

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -5,28 +5,36 @@
 }
 
 body {
-    min-height: 75rem; padding-top: 4.5rem;
-    }
+    display: flex;
+    flex-direction: column;
+}
 
 .form-white.input-group>.form-control:focus {
     border-color: #fff;
     box-shadow: inset 0 0 0 1px #fff;
-  }
+}
       
 .navbar-dark .navbar-nav .nav-link {
     color: #fff;
-  }
+}
       
 .navbar-dark .navbar-nav .nav-link:hover,
 .navbar-dark .navbar-nav .nav-link:focus {
     color: rgba(255, 255, 255, 0.75);
-  }
+}
 
 html,
 body {
     height: 100%;
     margin: 0;
+    padding: 0;
 }
+
+.content-wrapper {
+    flex: 1;
+    padding-top: 56px; /* Höhe der Navbar */
+}
+
 
 .hiddenlink {
     text-decoration: none;
